Add simple annotation processors